style.css
/* fonts roboto, poppins and crete round */
@import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@400;500&family=Poppins&family=Roboto:wght@700&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  max-width: 100%;
  overflow-x: hidden;
}

.material-icons {
  color: #fff;
}

/* Header styling */
.header {
  display: flex;
  flex-direction: row;
  list-style: none;
  justify-content: space-between;
  align-items: center;
  font-family: "roboto", serif;
  background-color: #3c3a39;
  color: #fff;
  padding: 10px 0;
  position: sticky;
  width: 100vw;
}

#name {
  font-family: "roboto", serif;
  color: #fff;
  font-size: 16px;
  margin-left: 24px;
  text-decoration: none;
}

#name:hover {
  color: #ff6b00;
}

#menu {
  margin-right: 10px;
}

/* self presentation styling */
#presentation {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #1c1a19;
  background-image: url(https://raw.githubusercontent.com/andgarzonmal/Portfolio/main/images/illustration-header-mobile.png);
  background-repeat: no-repeat;
  background-position: 100% 120%;
  padding: 0 24px;
}

#greatings {
  font-family: "crete round", serif;
  color: #ff6b00;
  font-size: 55.5px;
}

#hero {
  font-family: "roboto", serif;
  color: #fff5e1;
  font-size: 24px;
}

#invitation {
  font-family: "poppins", serif;
  color: #fff;
  font-size: 16px;
  margin-top: 10px;
}

/* Metia Icons Styling */
#media-icons {
  list-style: none;
  display: flex;
  justify-content: space-between;
  width: 50%;
  margin: 21.9px 5px;
}

.fa {
  width: 20px;
}

/* My recent works heading Styling */

#cards-heading {
  padding: 120px 24px 80px 24px;
}

.My-Works-Titles {
  font-size: 40px;
  font-family: "crete round", serif;
  padding: 120px 24px 24px 24px;
  font-weight: 400;
}

.work-header hr {
  border: none;
  height: 0.5px;
  background: #212121;
  margin: 0 24px 80px 24px;
}

/* cards secction styling */
.grid-cards-container {
  display: grid;
  grid-template-rows: 1.5fr repeat(6, 1fr);
  gap: 20px;
}

#post-Stories {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0 24px;
}

.categories {
  display: flex;
}

#Stories-image {
  margin-bottom: 24px;
}

.Stories-title {
  font-family: "crete round", serif;
  font-size: 32px;
  font-weight: 400;
}

#post-Stories p {
  font-family: "inter", serif;
  font-size: 16px;
  font-weight: 400;
  padding: 12px 0;
}

.Categorie-button {
  text-decoration: none;
  font-family: "inter", serif;
  font-size: 15px;
  color: #091e42;
}

.list {
  list-style: none;
  border: #8993a4 1px solid;
  padding: 8px 12px;
  margin-right: 12px;
}

.button-Stories {
  margin: 12px 0;
  padding: 12px;
  background-color: #ff6b00;
  border-style: none;
  font-family: "inter", serif;
  font-weight: 700;
  font-size: 17px;
  color: #fff;
}

.cards {
  display: flex;
  flex-direction: column;
  padding: 0 24px;
}

.card-photo-container {
  background-image: url(https://raw.githubusercontent.com/andgarzonmal/Portfolio/phase2/images/cardbg.png);
  background-repeat: no-repeat;
}

.card-title {
  font-family: "Crete Round", serif;
  font-size: 32px;
  font-style: normal;
  font-weight: 400;
  line-height: 44px;
  letter-spacing: 0;
  text-align: left;
  color: #fff;
  margin: 84px 16px 12px 16px;
}

.card-description {
  margin: 0 16px 12px 16px;
  color: #fff;
  font-family: "Inter", serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 0;
  text-align: left;
}

.card-list {
  display: flex;
  margin-left: 16px;
  padding-bottom: 24px;
}

.list-item {
  list-style: none;
  border: none;
  padding: 8px 12px;
  margin-right: 12px;
  background-color: rgba(255, 255, 255, 0.24);
}

.list-button {
  font-family: "Inter", serif;
  font-size: 15px;
  font-style: normal;
  font-weight: 500;
  line-height: 20px;
  letter-spacing: 0;
  text-align: left;
  color: #fff;
  text-decoration: none;
}

.cards .button-Stories {
  margin: 0;
}

#card7 {
  margin-bottom: 120px;
}

.button-Stories:hover {
  background-color: #ee9a5e;
}

/* About section styling */
.about {
  background-color: #1c1a19;
  background-image: url(https://raw.githubusercontent.com/andgarzonmal/Portfolio/phase2/images/aboutbg.png);
  background-repeat: no-repeat;
  background-position: 100% 98%;
  padding-bottom: 220px;
}

.about-me {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0 24px;
}

.myself {
  font-family: "Crete Round", serif;
  font-size: 72px;
  font-style: normal;
  font-weight: 400;
  line-height: 88px;
  letter-spacing: 0.3700000047683716px;
  text-align: left;
  color: #ff6b00;
  padding-top: 120px;
}

.button-card {
  align-self: baseline;
  margin: 12px 0;
  padding: 12px;
  background-color: #ff6b00;
  border-style: none;
  font-family: "inter", serif;
  font-weight: 700;
  font-size: 17px;
  color: #fff;
}

.button-card:hover {
  background-color: #ee9a5e;
}

.software-developer {
  font-family: "Inter", serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 0;
  text-align: left;
  color: #fff;
}

.abilities {
  background-color: #1c1a19;
}

.flex-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-top: 136px;
  padding-bottom: 60px;
}

hr.inline {
  border: none;
  background-color: #fff;
  height: 1px;
  margin: 0 24px;
}

.language {
  background-image: url(../Portfolio/images/Rectangle.png);
  background-repeat: no-repeat;
  background-position: 0 50%;
  padding-left: 35px;
  font-family: "inter", serif;
  font-size: 32px;
  font-style: normal;
  font-weight: 700;
  line-height: 44px;
  letter-spacing: 0;
  text-align: left;
  color: #fff;
}

.capabilities {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 44.73px;
  font-family: "Inter", serif;
  font-size: 22px;
  font-style: normal;
  font-weight: 400;
  line-height: 43px;
  letter-spacing: 0;
  text-align: center;
  color: #fff;
}

.capabilities ul {
  list-style: none;
  padding-bottom: 44px;
}

.cap-list {
  padding-bottom: 10px;
}

.frameworks {
  background-image: url(../Portfolio/images/Rectangle56.png);
  background-repeat: no-repeat;
  background-position: 0 50%;
  padding-left: 35px;
  font-family: "inter", serif;
  font-size: 32px;
  font-style: normal;
  font-weight: 700;
  line-height: 44px;
  letter-spacing: 0;
  text-align: left;
  color: #fff;
}

.skills {
  background-image: url(../Portfolio/images/circle.png);
  background-repeat: no-repeat;
  background-position: 0 50%;
  padding-left: 35px;
  font-family: "inter", serif;
  font-size: 32px;
  font-style: normal;
  font-weight: 700;
  line-height: 44px;
  letter-spacing: 0;
  text-align: left;
  color: #fff;
}

